scss/blocks/sidebar_nav.scss
// Bootstrap core
@import "../../../../../media/vendor/bootstrap/scss/functions";
@import "../../../../../media/vendor/bootstrap/scss/variables";
@import "../media/vendor/bootstrap/mixins";

// Bettum Variables and Mixins
@import "../mixins";
@import "../variables";


// Sidebar Nav
.sidebar {
  width: $sidebar-width;
  background-color: $sidebar-bg;

  @include media-breakpoint-down(md) {
    position: fixed;
    top: 0;
    bottom: 0;
    @include position('left', 0);
    z-index: 1000;
    @include translate(-100%);
    transition: transform .3s ease-in-out;

    &.show {
      transform: translateX(0);
      transition: transform .3s ease-in-out;
    }
  }

  nav {
    height: 100%;
    overflow-y: auto;
    scrollbar-width: thin;

    @include media-breakpoint-up(md) {
      position: fixed;
      top: 0;
      @include position('left', 0);
      width: $sidebar-width;
    }
  }

  ul {
    padding: 0;
    list-style: none;
  }

  .sidebar-item {
    position: relative;
    display: block;
    padding: .5rem .7rem;
    transition: background-color .3s ease-in-out;

    &:hover {
      text-decoration: none;
    }

    &.disabled {
      pointer-events: none;
      color: $nav-link-disabled-color;
    }

    .fa,
    .fas {
      margin-inline-end: 1rem;
    }
  }

  .navbar-nav > li > .sidebar-item:not(.disabled)[aria-expanded=true],
  .navbar-nav > li > .sidebar-item:not(.disabled):hover {
    background-color: $primary;
    transition: background-color .3s ease-in-out;
  }

  .navbar-nav > li > .sidebar-item::before {
    position: absolute;
    top: 0;
    bottom: 0;
    @include position('left', 0);
    width: 3px;
    content: "";
    background-color: $sidebar-bg;
    transition: background-color .3s ease-in-out; 
  }

  .navbar-nav > li > .sidebar-item:not(.disabled)[aria-expanded=true]::before,
  .navbar-nav > li > .sidebar-item:not(.disabled):hover::before {
    background-color: $blue-bg;
    transition: background-color .3s ease-in-out; 
  }

  .collapse-level-1 {
    background-color: darken($secondary, 5%);

    .sidebar-item {
      padding-inline-start: 2rem;
      font-size: .95rem;
    }
  }

  .collapse-level-2 {
    background-color: darken($secondary, 10%);

    .sidebar-item {
      padding-inline-start: 3rem;
      font-size: .9rem;
    }
  }

  .sidebar-heading .sidebar-item {
    color: $sidebar-heading-color;
  }

  .navbar-brand {
    padding: 1rem;
    margin: 0;
  }
}

.navbar-toggler {
  position: relative;
  z-index: 1045;
  color: $body-color;
}

html,
body {
  height: 100%;
}

@include media-breakpoint-up(lg) {
  .bettum-grid {
    display: grid;
    height: 100%;
    grid-template-columns: $sidebar-width minmax($sidebar-width, 1fr);
  }
}

